--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^13.1.0
+  firebase_core: ^2.25.3
+  cloud_firestore: ^4.15.3
 
 dev_dependencies:
   flutter_test:
