--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_bloc: ^8.0.0
   cupertino_icons: ^1.0.2
   go_router: ^13.1.0
   firebase_core: ^2.25.3
@@ -61,9 +59,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/data/exercises.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
