--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   go_router: ^13.1.0
   firebase_core: ^2.25.3
   cloud_firestore: ^4.15.3
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.8
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
