--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^2.25.3
   cloud_firestore: ^4.15.3
   json_annotation: ^4.8.1
+  fuzzywuzzy: ^1.1.6
+  fuzzy: <1.0.0
 
 dev_dependencies:
   flutter_test:
