--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_annotation: ^4.8.1
   fuzzywuzzy: ^1.1.6
   fuzzy: <1.0.0
+  flutter_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
