exercise search page search functionality is done!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "open_fitness_tracker",
             "request": "launch",
             "type": "dart",
-            "deviceId": "emulator-5554"
+            // "deviceId": "emulator-5554"
         },
         {
             "name": "open_fitness_tracker (profile mode)",
