--- a/.github/workflows/deploy-web-to-gh-pages.yml
+++ b/.github/workflows/deploy-web-to-gh-pages.yml
@@ -12,4 +12,7 @@ jobs:
       - uses: actions/checkout@v2 # Only works with v2
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
-      
+
+permissions:
+  contents: read
+  pages: write          
