add some crap for training page

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "open_fitness_tracker",
             "request": "launch",
             "type": "dart",
-            // "deviceId": "emulator-5554"
-            "deviceId": "windows"
+            "deviceId": "emulator-5554"
+            // "deviceId": "windows"
             // "deviceId": "chrome"
         },
         {
