--- a/.github/workflows/deploy-web-to-gh-pages.yml
+++ b/.github/workflows/deploy-web-to-gh-pages.yml
@@ -1,16 +1,16 @@
-name: Gh-Pages
+# name: Gh-Pages
 
-on:
-  push:
-    branches: [ dev ]
+# on:
+#   push:
+#     branches: [ dev ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2 # Only works with v2
-      - uses: subosito/flutter-action@v1
-      - uses: bluefireteam/flutter-gh-pages@v7
-        with:
-          webRenderer: html
+#     steps:
+#       - uses: actions/checkout@v2 # Only works with v2
+#       - uses: subosito/flutter-action@v1
+#       - uses: bluefireteam/flutter-gh-pages@v7
+#         with:
+#           webRenderer: html
