--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,3 +15,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_OPENFITNESSTRACKER_D8FGP5 }}'
           projectId: openfitnesstracker-d8fgp5
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
