training sesh mostly done for alpha
* update small things

* can now swipe to visually rm set

* rm ex by swipe seems to be working

* add readme stuff . fix rm set bug

* add remove set

---------

Co-authored-by: Luke Knoble <lknoble@penumbrainc.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,16 @@ dependencies:
   fuzzywuzzy: ^1.1.6
   fuzzy: <1.0.0
   flutter_riverpod: ^2.4.10
+  flex_dropdown: ^0.1.1
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.7.1
   build_runner: ^2.4.8
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -66,6 +70,7 @@ flutter:
 
   assets:
     - assets/data/exercises.json
+    - assets/media/bar_loading.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
