--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "type": "dart",
             // "deviceId": "emulator-5554"
-            "deviceId": "windows"
+            // "deviceId": "windows"
             // "deviceId": "chrome"
         },
         {
