I think create ex page is very roughly done

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "open_fitness_tracker",
             "request": "launch",
             "type": "dart",
-            // "deviceId": "emulator-5554"
+            "deviceId": "emulator-5554"
             // "deviceId": "windows"
             // "deviceId": "chrome"
         },
