--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flex_dropdown: ^0.1.1
   font_awesome_flutter: ^10.7.0
   flutter_portal: ^1.1.4
+  flutter_slidable: ^3.0.1
   
 dev_dependencies:
   flutter_test:
