--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,13 @@ dependencies:
   firebase_core: ^2.25.3
   cloud_firestore: ^4.15.3
   json_annotation: ^4.8.1
-  fuzzywuzzy: ^1.1.6
+  # fuzzywuzzy: ^1.1.6
   fuzzy: <1.0.0
   flutter_riverpod: ^2.4.10
   flex_dropdown: ^0.1.1
   font_awesome_flutter: ^10.7.0
   flutter_portal: ^1.1.4
-  flutter_slidable: ^3.0.1
+  shared_preferences: ^2.2.2
   
 dev_dependencies:
   flutter_test:
