--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   flutter_portal: ^1.1.4
   shared_preferences: ^2.2.2
+  hydrated_bloc: ^9.1.4
+  path_provider: ^2.1.2
+  intl: ^0.19.0
   
 dev_dependencies:
   flutter_test:
