--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,15 +37,24 @@ dependencies:
   firebase_core: ^2.25.3
   cloud_firestore: ^4.15.3
   json_annotation: ^4.8.1
-  fuzzywuzzy: ^1.1.6
+  # fuzzywuzzy: ^1.1.6
   fuzzy: <1.0.0
   flutter_riverpod: ^2.4.10
-
+  flex_dropdown: ^0.1.1
+  font_awesome_flutter: ^10.7.0
+  flutter_portal: ^1.1.4
+  shared_preferences: ^2.2.2
+  hydrated_bloc: ^9.1.4
+  path_provider: ^2.1.2
+  intl: ^0.19.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.7.1
   build_runner: ^2.4.8
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
