looking for bugs before adding cloud storage (#7)
* history page is starting to make sense. not pretty tho.

* add notes

* rm old google servies

* lets send to a friend..

---------

Co-authored-by: Luke Knoble <lknoble@penumbrainc.com>

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,8 +7,17 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath 'com.google.firebase:firebase-appdistribution-gradle:4.2.0'
     }
 }
+
+plugins {
+
+  // Add the dependency for the Google services Gradle plugin
+  id 'com.google.gms.google-services' version '4.4.1' apply false
+
+}
+
 
 allprojects {
     repositories {
