--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ android/app/google-services.json
 google-services.json
 GoogleService-Info.plist
 
+lib/firebase_options.dart
 firebase_options.dart
 firebase_app_id_file.json
