--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ android/app/google-services.json
 google-services.json
 GoogleService-Info.plist
 
+ios/firebase_app_id_file.json
 lib/firebase_options.dart
 firebase_options.dart
 firebase_app_id_file.json
