--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,5 +66,18 @@ flutter {
 }
 
 dependencies {
+    // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
+
+    // Add the dependency for the Firebase SDK for Google Analytics
+    implementation("com.google.firebase:firebase-analytics")
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-auth")
+     
+    implementation("com.google.firebase:firebase-firestore")
+
+    // Also add the dependency for the Google Play services library and specify its version
+    implementation("com.google.android.gms:play-services-auth:21.0.0")
 }
