--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,11 @@ dependencies:
   shared_preferences: ^2.2.2
   hydrated_bloc: ^9.1.4
   path_provider: ^2.1.2
-  intl: ^0.19.0
+  intl: ^0.18.1
+  firebase_ui_auth: ^1.13.1
+  firebase_ui_oauth_google: ^1.3.1
+  firebase_auth: ^4.18.0
+  google_sign_in: ^6.2.1
   
 dev_dependencies:
   flutter_test:
@@ -82,6 +86,11 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
+
+  fonts:
+    - family: SocialIcons
+      fonts:
+        - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
