--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,6 @@ google-services.json
 GoogleService-Info.plist
 
 ios/firebase_app_id_file.json
-lib/firebase_options.dart
-firebase_options.dart
+# lib/firebase_options.dart
+# firebase_options.dart
 firebase_app_id_file.json
