--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   firebase_ui_oauth_google: ^1.3.1
   firebase_auth: ^4.18.0
   google_sign_in: ^6.2.1
-  firebase_app_check: ^0.2.1+19
+  # firebase_app_check: ^0.2.1+19
   
 dev_dependencies:
   flutter_test:
