did I just recreate work?

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ build/
 **/flutter/generated_plugin_registrant.cc
 **/flutter/generated_plugins.cmake
 
-
-
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
@@ -36,8 +34,6 @@ doc/api/
 .flutter-plugins
 .flutter-plugins-dependencies
 
-
-
 #firebase
 .firebase
 
@@ -51,3 +47,6 @@ ios/firebase_app_id_file.json
 lib/firebase_options.dart
 firebase_options.dart
 firebase_app_id_file.json
+
+#mac crap!
+.DS_Store
