--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace "app.example.openfitnesstracker"
-    compileSdkVersion flutter.compileSdkVersion
+    // compileSdkVersion flutter.compileSdkVersion //todo
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -46,7 +47,8 @@ android {
         applicationId "app.example.openfitnesstracker"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 26 //todo lol what am I doing
+        // minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -66,6 +68,8 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
 
