--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,8 @@ buildscript {
 
 plugins {
   // Add the dependency for the Google services Gradle plugin
-  id 'com.google.gms.google-services' version '4.4.1' apply false
+  id 'com.google.gms.google-services' version '4.3.15' apply false
+//   id 'com.google.gms.google-services' version '4.4.1' apply false
 
 }
 
