--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,7 @@ dependencies:
 
   flutter_bloc: ^8.1.4
   cupertino_icons: ^1.0.2
-  go_router: ^13.1.0
-  firebase_core: ^2.25.3
-  cloud_firestore: ^4.15.3
+  go_router: ^14.2.7
   json_annotation: ^4.8.1
   fuzzy: <1.0.0
   flutter_riverpod: ^2.4.10
@@ -45,10 +43,16 @@ dependencies:
   shared_preferences: ^2.2.2
   hydrated_bloc: ^9.1.4
   path_provider: ^2.1.2
-  intl: ^0.18.1
-  firebase_ui_auth: ^1.13.1
-  firebase_ui_oauth_google: ^1.3.1
-  firebase_auth: ^4.18.0
+  intl: ^0.19.0
+  # intl: ^0.18.1
+  # firebase_core: ^2.25.3
+  firebase_core: ^3.4.0
+  # cloud_firestore: ^4.15.3
+  cloud_firestore: ^5.3.0
+  firebase_ui_auth: ^1.15.0
+  firebase_ui_oauth_google: ^1.3.3
+  # firebase_auth: ^4.18.0
+  firebase_auth: ^5.2.0
   google_sign_in: ^6.2.1
   
 dev_dependencies:
@@ -63,7 +67,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
