--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "app.example.openfitnesstracker"
-    // compileSdkVersion flutter.compileSdkVersion //todo
+    // compileSdkVersion flutter.compileSdkVersion  //lol this doesn't work
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -47,8 +47,8 @@ android {
         applicationId "app.example.openfitnesstracker"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 26 //todo lol what am I doing
-        // minSdkVersion flutter.minSdkVersion
+        minSdkVersion 26 
+        // minSdkVersion flutter.minSdkVersion //lol this doesn't work
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
