--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,16 +44,13 @@ dependencies:
   hydrated_bloc: ^9.1.4
   path_provider: ^2.1.2
   intl: ^0.19.0
-  # intl: ^0.18.1
-  # firebase_core: ^2.25.3
   firebase_core: ^3.4.0
-  # cloud_firestore: ^4.15.3
   cloud_firestore: ^5.3.0
+  firebase_auth: ^5.2.0
   firebase_ui_auth: ^1.15.0
   firebase_ui_oauth_google: ^1.3.3
-  # firebase_auth: ^4.18.0
-  firebase_auth: ^5.2.0
   google_sign_in: ^6.2.1
+  firebase_ui_oauth_apple: ^1.2.21
   
 dev_dependencies:
   flutter_test:
