--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "open_fitness_tracker any device",
+            "name": "OFS",
             "request": "launch",
             "type": "dart",
             "args": ["--debug"],
