--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_ui_oauth_google: ^1.3.3
   google_sign_in: ^6.2.1
   firebase_ui_oauth_apple: ^1.2.21
+  csv: ^6.0.0
   
 dev_dependencies:
   flutter_test:
