--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_ui_oauth_apple: ^1.2.21
   csv: ^6.0.0
+  file_picker: ^8.0.7
   
 dev_dependencies:
   flutter_test:
