--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,21 +32,21 @@ dependencies:
     sdk: flutter
 
   flutter_bloc: ^8.1.4
+  hydrated_bloc: ^9.1.4
+  flutter_riverpod: ^2.4.10 #rmme?
   cupertino_icons: ^1.0.2
   go_router: ^14.2.7
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   fuzzy: <1.0.0
-  flutter_riverpod: ^2.4.10
   flex_dropdown: ^0.1.1
   font_awesome_flutter: ^10.7.0
   flutter_portal: ^1.1.4
   shared_preferences: ^2.2.2
-  hydrated_bloc: ^9.1.4
   path_provider: ^2.1.2
   intl: ^0.19.0
-  firebase_core: ^3.4.0
-  cloud_firestore: ^5.3.0
-  firebase_auth: ^5.2.0
+  firebase_core: ^3.5.0
+  cloud_firestore: ^5.4.2
+  firebase_auth: ^5.3.0
   firebase_ui_auth: ^1.15.0
   firebase_ui_oauth_google: ^1.3.3
   google_sign_in: ^6.2.1
@@ -58,7 +58,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.7.1
-  build_runner: ^2.4.8
+  build_runner: ^2.4.12
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
