--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^14.2.7
   json_annotation: ^4.9.0
-  fuzzy: <1.0.0
+  fuzzy: ^0.5.1
+  fuzzywuzzy: ^1.2.0
   flex_dropdown: ^0.1.1
   font_awesome_flutter: ^10.7.0
   flutter_portal: ^1.1.4
@@ -54,7 +55,6 @@ dependencies:
   csv: ^6.0.0
   file_picker: ^8.0.7
   fl_chart: ^0.69.0
-  ollama: ^1.0.4
   
 dev_dependencies:
   flutter_test:
