--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: open_fitness_tracker
-description: "A new Flutter project."
+description: "an open source fitness tracker"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -33,15 +33,15 @@ dependencies:
 
   flutter_bloc: ^8.1.4
   hydrated_bloc: ^9.1.4
-  flutter_riverpod: ^2.4.10 #rmme?
-  cupertino_icons: ^1.0.2
+  # flutter_riverpod: ^2.4.10 #rmme?
+  # cupertino_icons: ^1.0.2
   go_router: ^14.2.7
   json_annotation: ^4.9.0
   fuzzy: ^0.5.1
   fuzzywuzzy: ^1.2.0
-  flex_dropdown: ^0.1.1
+  # flex_dropdown: ^0.1.1
   font_awesome_flutter: ^10.7.0
-  flutter_portal: ^1.1.4
+  # flutter_portal: ^1.1.4
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   intl: ^0.19.0
