dirty additions for exercise/set hist

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   csv: ^6.0.0
   file_picker: ^8.0.7
   fl_chart: ^0.69.0
+  keyboard_detection: ^0.7.3
   
 dev_dependencies:
   flutter_test:
